pkg/gox/testdata/errors/qualified_unknown_alias.gox
package demo

func View() any {
	return <ui.Header />
}
